stop&wait works for all tasks